# ProtoLib

./: .gitignore  BuildVer.h.in  CMakeLists.txt  README.md  build.cmd
src/: CMakeLists.txt  CRC32_Software.cpp  CRC32_Software.hpp  CobsEncoder.cpp  CobsEncoder.hpp  DataLinkLayer.cpp  DataLinkLayer.hpp  DiagnosticDomain.hpp  Diagnostics.cpp  Diagnostics.hpp  DleEncoder.cpp  DleEncoder.hpp  ICRCEngine.hpp  IDiagnostics.hpp  IEncoder.hpp  IFrame.cpp  IFrame.hpp  IProtoLayer.hpp  ProtoLib.cpp  ProtoLib.h  ProtoLib_Common.hpp  ProtoPdu.cpp  ProtoPdu.hpp  Utils.cpp  Utils.hpp
unit_tests/: Test_CRC32_SW.cpp  Test_CobsEncoder.cpp  Test_Common.cpp  Test_Common.hpp  Test_CommonEncoder.hpp  Test_DataLinkLayer.cpp  Test_DleEncoder.cpp  Test_Pdu.cpp  Test_PduAllocator.cpp  UnitTestMain.cpp
